# cpatools-toolbox-public

./: LICENSE  README.md  catalog.json
skills/dsd-to-xlsx/: CHANGELOG.md  SKILL.md
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/: README.md  pyproject.toml  requirements.txt
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/examples/: convert_batch.py  convert_one.py  test_self.py  verify_xlsx.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/src/dsd_to_xlsx/: __init__.py  __main__.py  models.py  verify.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/src/dsd_to_xlsx/core/: dsd_parser.py  unzipper.py  xml_parser.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/src/dsd_to_xlsx/extractors/: extraction_data.py  financial_extractor.py  number_parser.py  report_metadata.py  table_extractor.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/src/dsd_to_xlsx/parsers/: content_parser.py  meta_parser.py  note_splitter.py  text_parser.py  usermark_parser.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/src/dsd_to_xlsx/renderers/: sheet_naming.py  xlsx_metadata.py  xlsx_renderer.py
skills/dsd-to-xlsx/dsd_to_xlsx_pipeline/tests/: test_results_unit.json  test_unit.py
skills/footing-verifier/: CHANGELOG.md  README.md  SKILL.md  requirements.txt
skills/journal-entry-standardizer/: CHANGELOG.md  README.md  SKILL.md  requirements.txt
skills/land-price-query/: CHANGELOG.md  README.md  SKILL.md  requirements.txt
skills/registry-mortgage-analysis/: CHANGELOG.md  README.md  SKILL.md  requirements.txt
skills/rename-verify-2026-05-24/: SKILL.md
skills/revenue-tod/: CHANGELOG.md  README.md  SKILL.md  requirements.txt
(+32 files in other folders)
