[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsd-to-xlsx"
version = "0.2.0"
description = "DSD (DART audit report) → xlsx 단방향 변환 파이프라인"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9",
    "openpyxl>=3.1",
]

[project.scripts]
dsd2xlsx = "dsd_to_xlsx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dsd_to_xlsx"]
